# GKIT

./: CMakeLists.txt  Csirke.cpp  Hoeses.cpp  MozgoCs.cpp  Ticketek.cpp  hazi1.cpp  reszecske.cpp
